--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <style>
@@ -14,19 +15,40 @@
     a{text-align: center;}
     </style>
 <body>
-    <h1>ONG AYUDA A UN PELUDO</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nemo omnis veritatis numquam doloribus harum iusto illum quaerat fuga distinctio quo ad in dicta ullam magnam, sequi blanditiis tempora velit.</p>
-    <h2>Nuestros Integrantes</h2>
-    <ul><li>Persona 1 - Cargo 1</li>
-        <li>Persona 2 - Cargo 2</li>
-        <li>Persona 3 - Cargo 3</li>
-        <li>Persona 4 - Cargo 4</li>
-    </ul>
-    <h2>Nuestras secciones de ayuda:</h2>
-    <img src="gatoshp1.png" width="200" alt="No pudo cargar"> <a href="http://" target="_blank" rel="noopener noreferrer">Gatos</a> <br>
-    <img src="perroshp1.png" width="200" alt="No pudo cargar"> <a href="http://" target="_blank" rel="noopener noreferrer">Perros</a>
+    <div class = "grid-layout">
+        
+        <div class = "menu">
+                <div class = iniciobtn>
+                    Inicio
+                </div>
+                <div class = iniciobtn>
+                    Nosotros
+                </div>
+                <div class = iniciobtn>
+                    Perros
+                </div>
+                <div class = iniciobtn>
+                    Gatos
+                </div>
+                <div class = iniciobtn>
+                    Contacto
+                </div>
 
-
+        </div>
+        
+                <div class = "contenido">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam nemo omnis veritatis numquam doloribus harum iusto illum quaerat fuga distinctio quo ad in dicta ullam magnam, sequi blanditiis tempora velit.</p>
+                    <h2>Nuestros Integrantes</h2>
+                    <ul><li>Persona 1 - Cargo 1</li>
+                        <li>Persona 2 - Cargo 2</li>
+                        <li>Persona 3 - Cargo 3</li>
+                        <li>Persona 4 - Cargo 4</li>
+                    </ul>
+                    <h2>Nuestras secciones de ayuda:</h2>
+                    <img src="gatoshp1.png" width="200" alt="No pudo cargar"> <a href="http://" target="_blank" rel="noopener noreferrer">Gatos</a> <br>
+                    <img src="perroshp1.png" width="200" alt="No pudo cargar"> <a href="http://" target="_blank" rel="noopener noreferrer">Perros</a>
+                </div>
+    </div>
 
 </body>
 </html>
