--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="#">Perros</a>
                 <a href="#">Gatos</a>
-                <a href="#">Contacto</a>       
+                <a href="contacto.html">Contacto</a>       
             </div>
         </div>
     </header>
