--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
 
 
 <link rel="stylesheet" href="/assets/contacto.css">
+<link rel="stylesheet" href="assets/style.css">
 
 
   
@@ -19,7 +20,7 @@
             <div class="nav">
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
-                <a href="#">Perros</a>
+                <a href="perros.html">Perros</a>
                 <a href="#">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
        </header>
