--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav">
                 <a href="#">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
-                <a href="#">Perros</a>
+                <a href="perros.html">Perros</a>
                 <a href="#">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
             </div>
@@ -59,7 +59,7 @@
             <div class="articulos">  
                 <div class="carta1">
                     <h3>Perros</h3>
-                    <button>Ver más</button>
+                    <button href="perros.html">Ver más</button>
                 </div>
                 <div class="carta2">
                     <h3>Gatos</h3>
