--- a/PerfilArcano.html
+++ b/PerfilArcano.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-    <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Arcano</title>
 </head>
 <body>
     <header>
         <div class="container">
             <img src="img/logotransparente.png" alt="" class="logo">
             <div class="nav">
-                <a href="index.html">Inicio</a>
+                <a href="#">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="perros.html">Perros</a>
                 <a href="#">Gatos</a>
@@ -24,5 +21,6 @@
             </div>
         </div>
     </header>
+    
 </body>
 </html>
