--- a/perros.html
+++ b/perros.html
@@ -6,9 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
     <title>Perros</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/perros.css">
 </head>
 <body>
+   
     <header>
         <div class="container">
             <img src="img/logotransparente.png" alt="" class="logo">
@@ -21,21 +22,42 @@
             </div>
         </div>
     </header>
-    <h2 class="textPE">Perros en adopcion</h2>
-    <p class="Ptext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, exercitationem! Eius unde architecto perferendis adipisci? Dolor rem quidem nisi qui beatae impedit expedita perferendis tenetur assumenda dignissimos ipsam, minima aliquam!
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, vel recusandae. Culpa reiciendis at adipisci pariatur ex sint vitae quam labore amet aspernatur totam, neque repellendus accusantium voluptates temporibus eaque.
-    </p>
-    <h3 class="textPE2">Nuestros perros que buscan familia</h3>
-    <section class="fotos">
-        <img src="img/LOBO.jpg" alt="" class="lobo">
-        <img src="img/DOKI.jpg" alt="" class="doki">
-        <img src="img/ARCANO.jpg" alt="" class="arcano">
+
+    <section id="contenido">
+        <div class="container">
+            <div class="img-container"></div>
+            <div class="texto">
+                <h2>Nuestros perros
+                </span></h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, exercitationem! Eius unde architecto perferendis adipisci? Dolor rem quidem nisi qui beatae impedit expedita perferendis tenetur assumenda dignissimos ipsam, minima aliquam!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, vel recusandae. Culpa reiciendis at adipisci pariatur ex sint vitae quam labore amet aspernatur totam, neque repellendus accusantium voluptates temporibus eaque.
+                </p>
+            </div>
+
+        </div>
     </section>
-    <section class="botones">
-        <a class="Blobo" href="PerfilLobo.html">Lobo</a>
-        <a class="Bdoki" href="PerfilDoki.html">Doki</a>
-        <a class="Barcano" href="PerfilArcano.html">Arcano</a>
+
+    <section id="secciones-ayuda">
+        <div class="container">
+            <h2>Perros en adopcion</h2>
+            <div class="articulos">  
+                <div class="carta1">
+                    <h3>Arcano</h3>
+                    <button href="perros.html">Ver más</button>
+                </div>
+                <div class="carta2">
+                    <h3>Lobo</h3>
+                    <button>Ver más</button>
+                </div>     
+                <div class="carta3">
+                    <h3>Doki</h3>
+                    <button>Ver más</button>
+                </div>   
+            </div>    
+        </div>
     </section>
+
+
  
 </body>
 </html>
