--- a/PerfilArcano.html
+++ b/PerfilArcano.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ayuda a un peludo</title>
+    <link rel="stylesheet" href="assets/perros.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-    <title>Arcano</title>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <img src="img/logotransparente.png" alt="" class="logo">
             <div class="nav">
-                <a href="#">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
+                <a href="index.html">Inicio</a>
+                <a href="index.html#integrantes">Nosotros</a>
                 <a href="perros.html">Perros</a>
-                <a href="#">Gatos</a>
+                <a href="gatos.html">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
             </div>
         </div>
     </header>
-    
+<!--TITULO Y PARRAFO-->
+    <section id="contenido">
+        <div class="container">
+            <div class="img-arcano"></div>
+            <div class="texto">
+                <h2>Arcano</span></h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, vel recusandae. Culpa reiciendis at adipisci pariatur ex sint vitae quam labore amet aspernatur totam, neque repellendus accusantium voluptates temporibus eaque.
+                </p>
+                <ul>
+                    <li>Edad:</li>
+                    <li>Peso:</li>
+                    <li>Comportamiento:</li>
+                    <li>Sexo:</li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
+<!--volver atras-->
+    <section id="secciones-ayuda">
+        <div class="container">
+            <h2>¿No quieres llevarme?</h2>
+            <button onclick="location.href='/perros.html#secciones-ayuda'">Volver atras</button>
 </body>
 </html>
