--- a/PerfilChimu.html
+++ b/PerfilChimu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link rel="stylesheet" href="assets/perros.css">
+    <link rel="stylesheet" href="assets/gatos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -27,9 +27,9 @@
 <!--TITULO Y PARRAFO-->
     <section id="contenido">
         <div class="container">
-            <div class="img-lobo"></div>
+            <div class="img-chimuela"></div>
             <div class="texto">
-                <h2>Lobo</span></h2>
+                <h2>Chimu</span></h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, vel recusandae. Culpa reiciendis at adipisci pariatur ex sint vitae quam labore amet aspernatur totam, neque repellendus accusantium voluptates temporibus eaque.
                 </p>
                 <ul>
@@ -46,7 +46,7 @@
 <section id="secciones-ayuda">
     <div class="container">
         <h2>¿No quieres llevarme?</h2>
-        <button onclick="location.href='/perros.html#secciones-ayuda'">Volver atras</button>
+        <button onclick="location.href='/gatos.html#secciones-ayuda'">Volver atras</button>
 
 </body>
 </html>
