--- a/gatos.html
+++ b/gatos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda a un peludo</title>
-    <link rel="stylesheet" href="assets/perros.css">
+    <link rel="stylesheet" href="assets/gatos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
                 <a href="index.html">Inicio</a>
                 <a href="index.html#integrantes">Nosotros</a>
                 <a href="perros.html">Perros</a>
-                <a href="gatos.html">Gatos</a>
+                <a href="#">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
-                <h2>Nuestros perros</span></h2>
+                <h2>Nuestros gatos</span></h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, exercitationem! Eius unde architecto perferendis adipisci? Dolor rem quidem nisi qui beatae impedit expedita perferendis tenetur assumenda dignissimos ipsam, minima aliquam!
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, vel recusandae. Culpa reiciendis at adipisci pariatur ex sint vitae quam labore amet aspernatur totam, neque repellendus accusantium voluptates temporibus eaque.
                 </p>
@@ -40,19 +40,19 @@
 <!--PERROS EN ADOPCION-->
     <section id="secciones-ayuda">
         <div class="container">
-            <h2>Perros en adopcion</h2>
+            <h2>gatos en adopcion</h2>
             <div class="articulos">  
                 <div class="carta1">
-                    <h3>Arcano</h3>
-                    <button onclick="location.href='/PerfilArcano.html'">Ver más</button>
+                    <h3>Chimuela</h3>
+                    <button onclick="location.href='/PerfilChimu.html'">Ver más</button>
                 </div>
                 <div class="carta2">
-                    <h3>Lobo</h3>
-                    <button onclick="location.href='/PerfilLobo.html'">Ver más</button>
+                    <h3>Sarabi</h3>
+                    <button onclick="location.href='/PerfilSarabi.html'">Ver más</button>
                 </div>     
                 <div class="carta3">
-                    <h3>Doki</h3>
-                    <button onclick="location.href='/PerfilDoki.html'">Ver más</button>
+                    <h3>Hax</h3>
+                    <button onclick="location.href='/PerfilHax.html'">Ver más</button>
                 </div>    
             </div>    
         </div>
