--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="img/logotransparente.png" alt="" class="logo">
             <div class="nav">
                 <a href="#">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
+                <a href="#integrantes">Nosotros</a>
                 <a href="perros.html">Perros</a>
                 <a href="#">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
@@ -38,7 +38,7 @@
         </div>
     </section>
 <!--INTEGRANTES-->
-    <section id="integrantes">
+    <section id="integrantes" style="">
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
@@ -59,11 +59,11 @@
             <div class="articulos">  
                 <div class="carta1">
                     <h3>Perros</h3>
-                    <button href="perros.html">Ver más</button>
+                        <button type="perros" onclick="location.href='/perros.html'">Ver más</button> 
                 </div>
                 <div class="carta2">
                     <h3>Gatos</h3>
-                    <button>Ver más</button>
+                    <button type="gatos" onclick="location.href='/gatos.html'">Ver más</button>
                 </div>     
             </div>    
         </div>
