--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
             <img src="img/logotransparente.png" alt="" class="logo">
             <div class="nav">
                 <a href="index.html">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
+                <a href="index.html#integrantes">Nosotros</a>
                 <a href="perros.html">Perros</a>
                 <a href="#">Gatos</a>
                 <a href="contacto.html">Contacto</a>       
